# Lyric-Draft-Growth

./: CLAUDE.md  DIRECTORY.md  README.md  cron.example.sh  run_pipeline.sh  skills-lock.json
accounts_runtime/: README.md
configs/: account_influence.json
configs/frameworks/: PIPELINE_CONTRACT.md  README.md  SAMPLE_DECOMPOSITION_CARD_TEMPLATE.md  SAMPLE_MOVES_LAYER_MANIFEST.json  SOURCE_ITEM_SCHEMA.json  TYPE_LABEL_MAP.md  account_pool_50.md  account_pool_50.txt  account_pool_6_4.md  account_pool_scores_30d.json  fetch_seed_articles.py  koc_benchmark_accounts.md  open_candidates_2026-03-17.json  reclassify_seed_articles_llm.py  sample_quality_audit_30d.md  seed_articles_30d.json  seed_articles_30d.reclassified.md  seed_articles_grouped_30d.md
configs/image/: ARTICLE_DRAFT_SCHEMA.json  ARTICLE_IMAGE_BRIEF.template.json  ARTICLE_IMAGE_BRIEF_SCHEMA.json  ARTICLE_PUBLISH_CONTRACT.json  HUMANIZER_ZH_PACKET.json  IMAGE_STYLE_PROFILES.json  (+5 more)
content/: source_acquisition_strategy.md  source_registry.template.json
docs/: article_contract.md  article_image_style_spec.md  framework_handoff_map.md  podcast_rss_validation_2026-03-18.md  scheduler_entrypoints.md
framework/: FRAMEWORK_SPEC_SCHEMA.json  FRAMEWORK_SPEC_SCHEMA.md  REWRITE_CONTEXT_SCHEMA.json  audit_sample_quality_llm.py  build_open_candidate_pool.py  extract_sample_moves_layer.py  koc_benchmark_breakdown.md
lane_v2/: README.md
patches/: x-schedule-post-fixes.md
strategy/: content_matrix_strategy.md
tools/x-schedule-post/: .venv  pyproject.toml
tools/x-schedule-post/x_schedule_post/: cli.py
(+5610 files in other folders)
