[project]
name = "x-schedule-post"
version = "0.1.0"
description = "X scheduled post tool via Chrome DevTools MCP"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.12.1",
    "mcp>=1.26.0",
]

[project.scripts]
x-schedule-post = "x_schedule_post.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["x_schedule_post"]
